Select ul elements with 'recipe-ul' class
Instead targeting ul elements with type selector,
use class selector to target only recipe pages' ul elements

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,11 @@ a {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.lasagna-heading {
+.recipe-heading {
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.desc, .ingredients, .steps {
+.desc-h, .ingredients, .steps {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -27,7 +27,7 @@ a {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-ul, ol {
+.recipe-ul, ol {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: red;
 }
