Change class names to more meaningful names

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ a {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.ingredients, .steps {
+.ingredients-heading, .steps-heading {
     font-style: italic;
 }
 
