Change class names to more meaningful names

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ a {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.recipe-ul, ol {
+.ingredients-ul, ol {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: red;
 }
