--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,29 @@
+html {
+    box-sizing: border-box;
+  }
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit;
+  }
+
 body {
     background-color: black;
     color: white;
+    
+}
+
+.recipe-card {
+    width: 500px;
+    padding: 10px;
+    margin: 0 auto;
+    background-color: purple;
+    
 }
 
 .home-page-heading {
     font-family: 'Courier New', Courier, monospace;
+    /* text-align: center; */
 }
 
 a {
@@ -13,25 +32,50 @@ a {
 
 .recipe-heading {
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
 }
 
-.desc-h, .ingredients, .steps {
+.desc-h {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    
 }
 
 .ingredients-heading, .steps-heading {
     font-style: italic;
+    text-align: center;
+    margin-bottom: 0;
 }
 
 .desc-p {
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 .ingredients-ul, ol {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: red;
+    
 }
 
-ol {
-    color: green;
+
+
+li {
+    padding: 5px 0;
+    width: 250px;
 }
+
+img {
+    width: 450px;
+    display: block;
+    margin: 0 auto;
+}
+
+.list-container {
+    text-align: center;
+}
+
+.list-container > ul, ol {
+    text-align: left;
+    display: inline-block;
+}
+
